    references in memory, which was the behavior in 
    0.5 and earlier, so a flush of Parent/Child with
    only foreign key/primary key set will succeed.  
    This while still maintaining 0.6 and above's not 
    generating a ton of useless internal dependency 
    structures within the flush that don't correspond 
    to state actually within the current flush.
    [ticket:2082]

- sql
  - Added a fully descriptive error message for the
    case where Column is subclassed and _make_proxy()
    fails to make a copy due to TypeError on the
    constructor.   The method _constructor should
    be implemented in this case.

  - Added new event "column_reflect" for Table objects.
    Receives the info dictionary about a Column before
    the object is generated within reflection, and allows
    modification to the dictionary for control over
    most aspects of the resulting Column including 
    key, name, type, info dictionary.  [ticket:2095]

  - To help with the "column_reflect" event being used
    with specific Table objects instead of all instances
    of Table, listeners can be added to a Table object 
    inline with its construction using a new argument 
    "listeners", a list of tuples of the form 
    (<eventname>, <fn>), which are applied to the Table 
    before the reflection process begins.

- dialect
  - Changed exception raised to ArgumentError when an
    invalid dialect is specified. [ticket:2060]

- examples
  - Updated the association, association proxy examples
    to use declarative, added a new example 
    dict_of_sets_with_default.py, a "pushing the envelope" 
    example of association proxy.

0.7.0b2
========
- orm
  - Fixed bug whereby Session.merge() would call the
    load() event with one too few arguments.
    [ticket:2053]

  - Added logic which prevents the generation of 
    events from a MapperExtension or SessionExtension 
    from generating do-nothing events for all the methods 
    not overridden. [ticket:2052]

- sql