@@ -422,7 +422,7 @@ class PropertyOption(MapperOption):
         state['key'] = tuple(ret)
         self.__dict__ = state
 
-    def _find_entity( self, query, mapper, raiseerr):
+    def _find_entity_prop_comparator(self, query, token, mapper, raiseerr):
         if mapperutil._is_aliased_class(mapper):
             searchfor = mapper
             isa = False
@@ -435,9 +435,27 @@ class PropertyOption(MapperOption):
                 return ent
         else:
             if raiseerr:
-                raise sa_exc.ArgumentError("Can't find entity %s in "
-                        "Query.  Current list: %r" % (searchfor,
-                        [str(m.path_entity) for m in query._entities]))
+                raise sa_exc.ArgumentError(
+                    "Can't find property '%s' on any entity "
+                    "specified in this Query." % (token,)
+                )
+            else:
+                return None
+
+    def _find_entity_basestring(self, query, token, raiseerr):
+        for ent in query._mapper_entities:
+            # return only the first _MapperEntity when searching
+            # based on string prop name.   Ideally object
+            # attributes are used to specify more exactly.
+            return ent
+        else:
+            if raiseerr:
+                raise sa_exc.ArgumentError(
+                    "Can't find property named '%s' on the first mapped "
+                    "entity in this Query. "
+                    "Consider using an attribute object instead of a "
+                    "string name to target a specific entity." % (token, )
+                )
             else:
                 return None
 
@@ -459,13 +477,13 @@ class PropertyOption(MapperOption):
                 sub_tokens = token.split(".", 1)
                 token = sub_tokens[0]
                 tokens.extendleft(sub_tokens[1:])
-
                 if not entity:
                     if current_path:
                         if current_path[1] == token:
                             current_path = current_path[2:]
                             continue
-                    entity = query._entity_zero()
+                    entity = self._find_entity_basestring(query, 
+                            token, raiseerr)
                     path_element = entity.path_entity
                     mapper = entity.mapper
                 mappers.append(mapper)
@@ -473,7 +491,6 @@ class PropertyOption(MapperOption):
                     prop = mapper.get_property(token)
                 else:
                     prop = None
-                key = token
             elif isinstance(token, PropComparator):
                 prop = token.property
                 if not entity:
@@ -482,14 +499,13 @@ class PropertyOption(MapperOption):
                                 prop.key]:
                             current_path = current_path[2:]
                             continue
-                    entity = self._find_entity(query,
-                            token.parententity, raiseerr)
+                    entity = self._find_entity_prop_comparator(query,
+                            prop.key, token.parententity, raiseerr)
                     if not entity:
                         return [], []
                     path_element = entity.path_entity
                     mapper = entity.mapper
                 mappers.append(prop.parent)
-                key = prop.key
             else:
                 raise sa_exc.ArgumentError('mapper option expects '
                         'string key or list of attributes')
